--- a/Natives/resources/zh-Hans.lproj/Localizable.strings
+++ b/Natives/resources/zh-Hans.lproj/Localizable.strings
@@ -14,11 +14,13 @@
 
 // The play button
 "Play" = "启动游戏";
+"Details" = "详情";
 
 // Version categories
 "Installed" = "已安装";
 "Snapshot" = "快照";
 "Releases" = "正式版";
+"Unstable" = "不稳定";
 "Old-beta" = "远古 beta 版";
 "Old-alpha" = "远古 alpha 版";
 
@@ -28,7 +30,12 @@
 "Move" = "移动";
 "Remove" = "移除";
 "Resize" = "调整大小";
+// Visibility
+"Always" = "总是";
+"In game" = "游戏中";
+"In menu" = "菜单中";
 
+"custom_controls.button_edit.forward_lock" = "前向锁定";
 "custom_controls.button_edit.name" = "名称";
 "custom_controls.button_edit.size" = "大小";
 "custom_controls.button_edit.mapping" = "映射";
@@ -41,13 +48,13 @@
 "custom_controls.button_edit.stroke_color" = "边框颜色";
 "custom_controls.button_edit.corner_radius" = "圆角半径 (%)";
 "custom_controls.button_edit.opacity" = "不透明度 (%)：";
+"custom_controls.button_edit.visibility" = "可见性";
 
 "custom_controls.button_menu.add_subbutton" = "添加子按钮";
 "custom_controls.control_menu.discard_changes" = "取消更改";
 "custom_controls.control_menu.exit" = "退出";
 "custom_controls.control_menu.exit.warn" = "您将会退出且不保存任何更改。";
 "custom_controls.control_menu.save" = "保存";
-"custom_controls.control_menu.save.error.default" = "控件名称不能是“default”，因为它是不可更改的。";
 "custom_controls.control_menu.save.error.json" = "JSON 文件错误";
 "custom_controls.control_menu.save.error.write" = "保存按键布局时发生错误";
 "custom_controls.control_menu.load" = "加载";
@@ -55,19 +62,24 @@
 "custom_controls.control_menu.safe_area" = "安全区域";
 "custom_controls.control_menu.add_button" = "添加按键";
 "custom_controls.control_menu.add_drawer" = "添加组合键";
+"custom_controls.control_menu.add_joystick" = "添加摇杆";
 "custom_controls.error.incompatible" = "此控件版本（代码 %d）在当前启动器版本中尚未实现。";
 "custom_controls.hint" = "长按屏幕上的任意位置以获取更多选项";
 
 "init.migrateDir" = "目前 Amethyst 数据目录为%@。所有的游戏资源已移动到最新目录。";
 
+"java.error.missing_main_class" = "%@ 缺少主类属性。如果这是一个模组，请将其放入所选实例的“mods”文件夹中。";
+"java.error.missing_runtime" = "%@ 需要 Java %d 或更高版本才能运行。请先安装并在“管理运行时”中指定。";
+
 "launcher.mcl.downloading_file" = "正在下载 %@";
 "launcher.mcl.error_download" = "下载 %@ 失败：%@";
 
 "launcher.menu.custom_controls" = "自定义控制按键";
-"launcher.menu.install_jar" = "安装 .jar";
+"launcher.menu.execute_jar" = "执行 .jar";
 
 "launcher.wait_jit.title" = "请等待应用获取到JIT(Just-in-time)";
 "launcher.wait_jit.message" = "Amethyst启动器必须要JIT (Just-in-time) 权限才能启动游戏";
+"launcher.wait_jit_trollstore.message" = "如果您仍然看到此消息，请在 TrollStore 中启用 URL Scheme。";
 
 "login.error.username.outOfRange" = "用户名必须在 3-16 个字符以内";
 
@@ -78,6 +90,7 @@
 "login.jit.fail" = "无法启用 JIT。";
 "login.jit.fail.title" = "无法在您的设备上启用 JIT。";
 "login.jit.fail.description" = "没有集成可在您的设备上自动启用 JIT，现在需要手动启用。错误已记录到 latestlog.txt。";
+"login.jit.fail.description_unsupported" = "检测到不支持的安装方法。请使用支持的安装方法之一重新安装。";
 
 // Login buttons
 "login.menu.sendlogs" = "发送日志文件";
@@ -93,6 +106,8 @@
 "login.warn.message.legacy_ios" = "运行下一个主要版本，需要一台能够运行 iOS 14 或更高版本的设备。";
 "login.warn.title.limited_ram" = "该设备的可用内存有限。";
 "login.warn.message.limited_ram" = "我们建议启用自动分配内存大小，以防止不稳定和性能问题。";
+"login.warn.title.ios19_jitdead" = "Amethyst 在 iOS 26 或更高版本上不受支持。";
+"login.warn.message.ios19_jitdead" = "由于 iOS 的更改抑制了启用 JIT 的能力，Amethyst 在当前状态下无法工作，需要大量研究以寻找新的前进道路。\n\n按 OK 将关闭应用。";
 
 "login.warn.title.demomode" = "您现在是演示账户";
 "login.warn.message.demomode" = "演示模式作为离线和本地模式的替代，将允许你登录到一个尚未购买游戏的微软账户中游玩 1.3.1 及更新版本的试玩版本。因为官方启动器的一些特性，在较旧版本中会包含完整的游戏。详情请参阅我们的网站，了解更多关于离线模式的过渡。";
@@ -113,6 +128,7 @@
 "login.msa.progress.checkMCProfile" = "(5/5) 检查 Minecraft 配置文件";
 
 "News" = "新闻";
+"Profiles" = "配置";
 "Settings" = "设置";
 
 "preference.section.general" = "启动器基础设置";
@@ -121,9 +137,9 @@
 "preference.section.control" = "自定义控制键";
 "preference.section.debug" = "UI设置";
 "preference.section.footer.debug" = "除了调试外，这些设置可能对自定义控件有用。您可能需要重新启动启动器才能使更改生效。";
-//"preference.section.footer.control" = "";
+"preference.section.footer.control" = "";
+"preference.section.footer.java" = "";
 "preference.section.java" = "Java 调整";
-//"preference.section.footer.java" = "";
 
 "preference.title.confirm" = "确认？";
 
@@ -137,10 +153,6 @@
 "preference.detail.cosmetica" = "启用来自 Cosmetica（原 Arc ）的披风。欲了解更多信息，请访问 https://arcapes.com。需要 OptiFine。";
 "preference.title.debug_logging" = "调试日志";
 "preference.detail.debug_logging" = "完整的记录启动器的各种活动事件到latestlog.txt文件内,有助于开发者更容易的发现错误。但Minecraft游戏内FPS可能会降低(频繁的记录日志内容会使得CPU负载变高)";
-"preference.title.jitstreamer_server" = "JitStreamer的服务器地址";
-"preference.detail.jitstreamer_server" = "该选项将自定义获取 JIT 权限地址的 JitStreamer 服务器，若你不知道如何修改请勿修改，当然也可以保持默认地址";
-"preference.title.enable_altkit" = "启用 AltKit 集成";
-"preference.detail.enable_altkit" = "启用时，Amethyst 将尝试连接到本地 AltServers 以启用 JIT。";
 "preference.title.appicon" = "设置应用应用图标风格";
 "preference.detail.appicon" = "允许您为 Amethyst 选择不同的主屏幕图标。";
 "preference.title.appicon-default" = "设置 Amethyst 图标为浅色";
@@ -165,11 +177,13 @@
 "preference.title.renderer.release.auto" = "自动";
 "preference.title.renderer.release.gl4es" = "holy gl4es";
 "preference.title.renderer.release.angle" = "ANGLE";
+"preference.title.renderer.release.mg" = "MobileGlues";
 "preference.title.renderer.release.zink" = "Zink";
 
 "preference.title.renderer.debug.auto" = "自动：gl4es 或 ANGLE";
 "preference.title.renderer.debug.gl4es" = "gl4es 1.1.4 - OpenGL版本2.1";
 "preference.title.renderer.debug.angle" = "ANGLE（仅支持1.17+）- exports OpenGL 版本 3.2";
+"preference.title.renderer.debug.mg" = "MobileGlues (1.17+) - 导出 OpenGL 4.0，实验性";
 "preference.title.renderer.debug.zink" = "Zink（Mesa 21.0）- exports OpenGL 版本 4.1";
 
 "preference.detail.renderer" = "更改使用的 OpenGL 渲染器";
@@ -179,19 +193,27 @@
 "preference.title.max_framerate" = "最大帧率";
 "preference.detail.max_framerate" = "允许您在 ProMotion 显示器上将游戏帧率限制为 60FPS。";
 
+"preference.title.performance_hud" = "显示性能 HUD";
+"preference.detail.performance_hud" = "可用时显示性能监控覆盖层。";
+
 "preference.title.fullscreen_airplay" = "全屏 AirPlay";
 "preference.detail.fullscreen_airplay" = "允许在外部显示器上全屏显示游戏，而不是直接镜像显示。";
 "preference.title.silence_other_audio" = "游戏打开时暂停音频";
 "preference.detail.silence_other_audio" = "启用后将允许 Amethyst 在启动游戏时暂停其他应用的音频。";
 "preference.title.silence_with_switch" = "使用静音开关禁用音频";
 "preference.detail.silence_with_switch" = "启用时，可以使用静音模式禁用音频，耳机和外部扬声器不受此影响。";
+"preference.title.allow_microphone" = "允许麦克风输入";
+"preference.detail.allow_microphone" = "仅当您使用语音聊天模组时才启用此选项。静音开关选项将被忽略，其他应用的音频质量将受到影响。";
 "preference.title.default_gamepad_ctrl" = "手柄配置";
 "preference.title.hardware_hide" = "硬件连接时隐藏控制键";
 "preference.detail.hardware_hide" = "启用连接鼠标或游戏控制器时自动禁用屏幕控制叠加的行为。";
+"preference.title.recording_hide" = "屏幕录制时隐藏控制键";
+"preference.detail.recording_hide" = "从屏幕截图和屏幕录制中隐藏控制键，同时它们仍在屏幕上可见。";
 "preference.title.gesture_mouse" = "鼠标手势";
 "preference.detail.gesture_mouse" = "启用手势，例如点击放置方块、按住破坏方块、用两根手指转动视角";
 "preference.title.gesture_hotbar" = "快捷栏手势";
 "preference.detail.gesture_hotbar" = "启用手势，例如点击快捷栏物品槽、双手交换物品、丢弃物品";
+"preference.title.disable_haptics" = "禁用屏幕触感反馈";
 "preference.title.press_duration" = "长按延迟（毫秒）";
 "preference.detail.press_duration" = "修改长按摧毁方块、丢弃物品的触发时长。";
 "preference.title.button_scale" = "屏幕按钮缩放 (%)";
@@ -212,11 +234,22 @@
 "preference.title.gyroscope_sensitivity" = "陀螺仪控制灵敏度";
 "preference.detail.gyroscope_sensitivity" = "调整陀螺仪控制的灵敏度";
 
-"preference.title.java_home" = "游戏版本小于 1.17 时仍然使用 Java 17";
-"preference.detail.java_home" = "这些版本默认使用 Java 8。启用此选项可强制使用 Java 17，但不保证兼容性。";
+"preference.title.manage_runtime" = "管理运行时";
+"preference.title.confirm.delete_runtime" = "%@ 将被删除";
+"preference.manage_runtime.header.default" = "首选 Java 版本";
+"preference.manage_runtime.default.1165" = "1.16.5 及更旧版本";
+"preference.manage_runtime.default.117" = "1.17 及更新版本";
+"preference.manage_runtime.footer.default" = "Minecraft 1.16.5 及更旧版本可能可以使用较新的 Java 版本运行，但不保证与模组的兼容性。外部运行时可以放在“java_runtimes”文件夹中。更改“执行 .jar”的 Java 版本仅在安装程序不期望较新 Java 版本时生效。";
+"preference.manage_runtime.footer.java8" = "这是 Minecraft 1.16.5 及更旧版本的默认版本。";
+"preference.manage_runtime.footer.java17" = "这是 Minecraft 1.17 及更新版本的默认版本。";
+"preference.manage_runtime.header.invalid" = "无效的运行时";
+
 "preference.title.java_args" = "JVM 启动参数";
 "preference.detail.java_args" = "当启动 Minecraft 时将参数传递到 Java。小心，如果修改不正确，可能会使游戏崩溃。";
 "preference.placeholder.java_args" = "自定义参数...";
+"preference.title.env_variables" = "环境变量";
+"preference.detail.env_variables" = "启动 Minecraft 时设置自定义环境变量。小心，如果修改不正确，可能会使游戏崩溃。";
+"preference.placeholder.env_variables" = "指定变量...";
 "preference.title.auto_ram" = "自动设置内存大小";
 "preference.detail.auto_ram" = "启用内存自动调节";
 "preference.warn.auto_ram" = "在未越狱的设备禁用此选项上可能会导致应用不稳定。请谨慎更改此选项。";
@@ -226,6 +259,8 @@
 "preference.title.custom_env" = "环境变量";
 "preference.detail.custom_env" = "此选项正在构建中。在此期间创建并编辑 custom_env.txt。";
 
+"preference.title.debug_always_attached_jit" = "保持附加到 StikDebug";
+"preference.detail.debug_always_attached_jit" = "如果您的模组需要在运行时加载 .dylib，请启用此选项。开启时，StikDebug 的画中画在游戏过程中不应关闭。";
 "preference.title.debug_skip_wait_jit" = "跳过获取\"JIT(Just-in-time)\"请求";
 "preference.detail.debug_skip_wait_jit" = "这并不是让您在没有 JIT 的情况下启动，而是跳过调试检查，因为在越狱设备上会检查失败。";
 "preference.title.debug_ipad_ui" = "使用 iPadOS 界面";
@@ -234,10 +269,23 @@
 "preference.detail.debug_auto_correction" = "在游戏中输入文本时启用自动校正。";
 "preference.title.debug_hide_home_indicator" = "隐藏主屏幕指示键";
 "preference.detail.debug_hide_home_indicator" = "此选项将会禁用主屏幕指示键锁定，你将会需要启用引导式访问来同时隐藏和锁定主屏幕指示键。";
-"preference.title.debug_show_layout_bounds" = "显示边界布局";
-"preference.detail.debug_show_layout_bounds" = "显示剪辑边界、边距";
-"preference.title.debug_show_layout_overlap" = "布局重叠显示";
-"preference.detail.debug_show_layout_overlap" = "用浅黄色覆盖每个视图，颜色越深则重叠越多";
+
+"preference.profile.title.name" = "名称";
+"preference.profile.title.loader_type" = "加载器类型";
+"preference.profile.title.loader_vendor" = "加载器提供商";
+"preference.profile.title.loader_version" = "加载器版本";
+"preference.profile.title.version" = "版本";
+"preference.profile.title.version_type" = "版本类型";
+"preference.profile.title.default_touch_control" = "触摸控制";
+"preference.profile.title.default_gamepad_control" = "游戏手柄控制";
+
+"profile.error.name_exists" = "已存在同名配置。请使用其他名称。";
+"profile.section.instance" = "游戏实例设置";
+"profile.section.profiles" = "此实例中的配置";
+"profile.title.create" = "创建新配置";
+"profile.title.separate_preference" = "隔离设置";
+"profile.detail.separate_preference" = "启用此选项以隔离设置中所做的任何更改。执行重置将恢复到全局设置，而不是默认设置。";
+"profile.title.install_fabric_quilt" = "安装 Fabric/Quilt";
 
 "controller_configurator.title.current" = "游戏键盘配置文件";
 "controller_configurator.title.type.xbox" = "Xbox";
