--- a/Natives/resources/zh-Hans.lproj/Localizable.strings
+++ b/Natives/resources/zh-Hans.lproj/Localizable.strings
@@ -332,3 +332,9 @@
 "controller_configurator.section.footer.menu_mappings" = "当鼠标未被锁定时，如在标题屏幕或暂停菜单中时绑定。";
 "controller_configurator.section.controller_style" = "手柄类型";
 "controller_configurator.section.footer.controller_style" = "在此配置器中显示不同的手柄按钮名称。";
+
+// TouchController support
+"preference.title.mod_touch_enable" = "启用 TouchController 支持";
+"preference.detail.mod_touch_enable" = "启用 TouchController 模组支持。注意：开启此项将禁用“可滑动快捷栏”。";
+"preference.popup.touch_info.title" = "TouchController 适配说明";
+"preference.popup.touch_info.message" = "本功能是基于 TouchController 模组的非官方 iOS 移植版本。\n\n原项目信息：https://github.com/TouchController/TouchController \n感谢原作者开源 (GPLv3)。\n\n技术说明：\n由于原模组不支持 iOS，本功能通过本地 UDP 协议 (Localhost) 在启动器与游戏进程间建立通信桥接。此连接仅用于设备内部传输触控数据，绝不会连接互联网，请放心使用。";
