--- a/Natives/resources/en.lproj/Localizable.strings
+++ b/Natives/resources/en.lproj/Localizable.strings
@@ -76,14 +76,23 @@
 
 "launcher.menu.custom_controls" = "Custom controls";
 "launcher.menu.execute_jar" = "Execute .jar";
+"launcher.menu.import_modpack" = "Import modpack";
 
 "launcher.wait_jit.title" = "Waiting for JIT";
 "launcher.wait_jit.message" = "Amethyst relies on Just-in-time compilation for Java to work at maximum performance.";
 "launcher.wait_jit_trollstore.message" = "If you still see this message, please enable URL Scheme in TrollStore.";
 
 "login.error.username.outOfRange" = "Username must be at least 3 characters and a maximum of 16 characters";
+"login.error.fields.empty" = "Please fill in all fields";
+"login.error.invalid_credentials" = "Invalid username or password";
+"login.error.token_missing" = "Access token or client token is missing";
+"login.error.token_expired" = "Authentication token has expired, please log in again";
+"login.error.invalid_response" = "Invalid server response";
 
 "login.alert.field.username" = "Username";
+"login.alert.field.password" = "Password";
+"login.alert.field.server" = "Server Address";
+"login.error.invalid_server" = "Invalid server address";
 
 "login.jit.checking" = "Checking for JIT";
 "login.jit.enabled" = "JIT has been enabled";
@@ -99,6 +108,7 @@
 "login.option.demo" = "Demo account";
 "login.option.microsoft" = "Microsoft account";
 "login.option.local" = "Local account";
+"login.option.3rdparty" = "Third-party account";
 
 "login.warn.title.legacy_device" = "The next release of Amethyst will not be compatible with this device.";
 "login.warn.message.legacy_device" = "To run the next major release, a device capable of running iOS 14 is required.";
@@ -127,7 +137,18 @@
 "login.msa.progress.acquireMCToken" = "(4/5) Acquiring the Minecraft token";
 "login.msa.progress.checkMCProfile" = "(5/5) Checking the Minecraft profile";
 
+"login.3rdparty.progress.auth" = "Authenticating with third-party server";
+"login.3rdparty.progress.refresh" = "Refreshing third-party authentication";
+"login.3rdparty.2fa.title" = "Two-Factor Authentication";
+"login.3rdparty.2fa.message" = "Please enter your two-factor authentication code";
+"login.3rdparty.2fa.code" = "Authentication code";
+"login.3rdparty.2fa.empty" = "Authentication code cannot be empty";
+
 "News" = "News";
+"preference.title.news_url" = "News URL";
+"preference.detail.news_url" = "Set the URL for the news page";
+"preference.title.reset_news_url" = "Reset news URL to default";
+"preference.detail.reset_news_url" = "Reset the news URL to its default value";
 "Profiles" = "Profiles";
 "Settings" = "Settings";
 
@@ -151,6 +172,10 @@
 "preference.detail.check_sha" = "This option forces launcher to check the file hash if it's available. Prevents broken downloads.";
 "preference.title.cosmetica" = "Cosmetica Capes";
 "preference.detail.cosmetica" = "Enable capes from Cosmetica (previously Arc). For more information please visit https://cosmetica.cc. Requires OptiFine";
+"preference.title.download_source" = "Download Source";
+"preference.detail.download_source" = "Choose the download source for game resources. BMCLAPI mirror provides faster download speeds in China.";
+"preference.title.download_source-official" = "Official Source";
+"preference.title.download_source-bmclapi" = "BMCLAPI Mirror";
 "preference.title.debug_logging" = "Debug logging";
 "preference.detail.debug_logging" = "Logs internal settings and actions to latestlog.txt. This helps the developers find issues easier, but Minecraft may run slower as the logs will be written to more often.";
 "preference.title.appicon" = "Set app icon";
@@ -214,10 +239,15 @@
 "preference.title.gesture_hotbar" = "Hotbar gestures";
 "preference.detail.gesture_hotbar" = "Enables gestures, such as touch the hotbar slot, swap items between hand, throw items";
 "preference.title.disable_haptics" = "Disable on-screen haptics";
+"preference.detail.disable_haptics" = "Disable haptic feedback (vibration) effects in the game to save battery.";
 "preference.title.press_duration" = "Long-press duration (ms)";
 "preference.detail.press_duration" = "Trigger press duration for destroying blocks and dropping items.";
 "preference.title.button_scale" = "On-screen button scale (%)";
 "preference.detail.button_scale" = "Upscale them if buttons are too small, usually needed for iPad users.";
+"preference.title.custom_mouse_pointer" = "Custom Mouse Pointer";
+"preference.detail.custom_mouse_pointer" = "Select a custom image as the in-game mouse pointer appearance.";
+"preference.title.reset_mouse_pointer" = "Reset Mouse Pointer";
+"preference.detail.reset_mouse_pointer" = "Reset the mouse pointer to its default appearance.";
 "preference.title.mouse_scale" = "Mouse scaling (%)";
 "preference.detail.mouse_scale" = "Change the size of the virtual mouse";
 "preference.title.mouse_speed" = "Mouse speed (%)";
@@ -259,8 +289,9 @@
 "preference.title.custom_env" = "Environment variables";
 "preference.detail.custom_env" = "This option is under construction. Create and edit custom_env.txt in the meantime.";
 
+"preference.title.debug_universal_script_jit" = "Use Universal StikDebug Script";
 "preference.title.debug_always_attached_jit" = "Keep attached to StikDebug";
-"preference.detail.debug_always_attached_jit" = "Enable this if your mods require loading .dylib at runtime. When this is on, StikDebug's PiP should not be closed during gameplay.";
+"preference.detail.debug_always_attached_jit" = "Enable this if your mods require loading .dylib at runtime. When this is on, StikDebug's PiP should not be closed during gameplay. Requires Universal Script enabled";
 "preference.title.debug_skip_wait_jit" = "Skip \"Waiting for JIT\" dialog";
 "preference.detail.debug_skip_wait_jit" = "This does not allow you to launch without JIT, instead this skips debugger check, because check fails on certain jailbreaks.";
 "preference.title.debug_ipad_ui" = "Unlock iPadOS UI";
@@ -332,3 +363,39 @@
 "controller_configurator.section.footer.menu_mappings" = "Bindings when the mouse is not locked, such as on the title screen or in the pause menu.";
 "controller_configurator.section.controller_style" = "Controller type";
 "controller_configurator.section.footer.controller_style" = "Show different controller button names in this configurator.";
+
+"preference.title.appicon-custom" = "Custom";
+"preference.title.custom_appicon" = "Custom App Icon";
+"preference.detail.custom_appicon" = "Select a custom image to use as the app icon";
+"提示" = "Notice";
+
+// Announcement messages
+"announcement.preview_version" = "Welcome to Amethyst iOS Remastered Preview Version!";
+"announcement.latest_version" = "Welcome to Amethyst iOS Remastered! This is the latest stable version.";
+"announcement.new_version_available" = "New version available: %@";
+"announcement.download_button" = "Download Now";
+
+// TouchController Preferences
+"preference.touchcontroller.title" = "TouchController";
+"preference.touchcontroller.section.mode" = "Communication Mode";
+"preference.touchcontroller.section.info" = "Information";
+"preference.touchcontroller.mode.title" = "Communication Mode";
+"preference.touchcontroller.select_mode.title" = "Select Communication Mode";
+"preference.touchcontroller.mode.disabled" = "Disabled";
+"preference.touchcontroller.mode.udp" = "UDP Protocol";
+"preference.touchcontroller.mode.staticlib" = "Static Library";
+"preference.touchcontroller.udp.title" = "UDP Protocol Mode";
+"preference.touchcontroller.udp.message" = "TouchController will communicate via UDP port 12450. This mode is compatible with most servers and provides stable network communication.";
+"preference.touchcontroller.staticlib.title" = "Static Library Mode";
+"preference.touchcontroller.staticlib.message" = "TouchController will use native static library for high-performance local communication via Unix Domain Socket. This mode provides better performance but requires the static library to be linked.";
+"preference.touchcontroller.about" = "About TouchController";
+"preference.touchcontroller.about.title" = "About TouchController";
+"preference.touchcontroller.about.message" = "TouchController is a Minecraft mod that adds touch controls to Java Edition. This launcher supports two communication modes:\n\n• UDP Protocol: Network-based communication\n• Static Library: High-performance local communication\n\nVisit GitHub for more information.";
+"preference.touchcontroller.ok" = "OK";
+"preference.touchcontroller.cancel" = "Cancel";
+"preference.touchcontroller.vibrate.enable" = "Enable Vibration";
+"preference.touchcontroller.vibrate.intensity" = "Vibration Intensity";
+"preference.touchcontroller.vibrate.intensity.light" = "Light";
+"preference.touchcontroller.vibrate.intensity.medium" = "Medium";
+"preference.touchcontroller.vibrate.intensity.heavy" = "Heavy";
+"preference.touchcontroller.moveview.enable" = "Enable Move View";
